# mai_qrcode

./: Dockerfile  LICENSE  README.md  compose.yml  download_wechat.sh  entrypoint.sh
app/: .env  pyproject.toml
app/src/: main.py
app/src/app/: main.py
